--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branchs:
       - master
+      - feature-liuzx-ci
   workflow_dispatch:
 
 jobs:
@@ -18,6 +19,8 @@ jobs:
       - name: Install Dependencies
         run: |
 
+          apt update
+
           apt install build-essential
 
           curl -fsSL https://xmake.io/shget.text | bash
@@ -26,7 +29,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: |
 
-          xmake f --linux-headers=/usr/src/linux-headers-5.4.0-198-generic/
+          xmake f --linux-headers=/usr/src/linux-headers-${shell uname -r}/
       
       - name: Build Targets
         working-directory: ${{github.workspace}}
