--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
           apt update
 
-          apt install build-essential
+          apt install build-essential -y
 
           curl -fsSL https://xmake.io/shget.text | bash
 
