--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - feature-liuzx-gtest
   workflow_dispatch:
 
 # see more at https://github.com/DavidingPlus/nvmixfs/issues/1
