--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,16 @@ jobs:
 
           apt update
 
-          apt install curl build-essential -y
+          apt install curl -y
+
+          apt install build-essential -y
+
+          # cmake dependency which needs extra terminal input, annoying
+          # see more at https://blog.xzr.moe/archives/151/
+          echo "Asia\nShanghai" | apt install tzdata -y
+
+          # conan needs cmake and pip
+          apt install cmake -y
 
           apt install python3 python3-pip -y
 
@@ -57,7 +66,7 @@ jobs:
           export XMAKE_ROOT=y
 
           xmake f -m release --linux-headers=/usr/src/linux-headers-${KERNEL_VERSION}/ -y
-      
+
       - name: Build Targets
         working-directory: ${{github.workspace}}
         run: |
