build target mkfs.nvmixfs in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,3 +75,13 @@ jobs:
           export XMAKE_ROOT=y
 
           xmake build
+
+      - name: Build Target mkfs.nvmixfs
+        working-directory: ${{github.workspace}}
+        run: |
+
+          alias xmake="~/.local/bin/xmake"
+          export XMAKE_ROOT=y
+
+          touch snippet/MkfsNvmixfs/.buildme
+          xmake build mkfs.nvmixfs
