run CI for tags

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,9 +1,11 @@
-name: Run Unit Test
+name: Unit Test
 
 on:
   push:
     branches:
       - "**"
+    tags:
+      - "v*"
   workflow_dispatch:
 
 jobs:
