--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,9 +1,9 @@
 /******************************************************************************
- * !!! 自动生成的配置文件的模板文件 - 请勿手动修改格式 !!!
+ * !!! 生成配置文件 config.h 的模板文件 --- 请勿手动修改或格式化 !!!
  * ---------------------------------------------------------------------------
  * 配置文件 config.h 通过构建系统动态生成，对本文件进行任何修改或手动格式化操作都可能导致：
- * - ${VERSION} 等占位符失效
- * - 版本号宏定义结构破坏
+ * - ${VERSION} 等占位符失效。
+ * - 版本号宏定义结构破坏。
  ******************************************************************************/
 
 
