doxygen on config

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,11 +1,14 @@
-/******************************************************************************
- * !!! 生成配置文件 config.h 的模板文件 --- 请勿手动修改或格式化 !!!
- * ---------------------------------------------------------------------------
- * 配置文件 config.h 通过构建系统动态生成，对本文件进行任何修改或手动格式化操作都可能导致：
+/**
+ * @file config.h.in
+ * @author DavidingPlus (davidingplus@qq.com)
+ * @brief 生成配置文件 config.h 的模板文件。请勿手动修改或格式化!!!
+ * @details 配置文件 config.h 通过 XMake 构建系统动态生成，对本文件进行任何修改或手动格式化操作都可能导致：
  * - ${VERSION} 等占位符失效。
  * - 版本号宏定义结构破坏。
- ******************************************************************************/
-
+ *
+ * Copyright (c) 2025 电子科技大学 刘治学
+ *
+ */
 
 /**
  * @brief 完整版本号（X.Y.Z）。
