--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,14 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
     tags:
       - "v*"
-  workflow_dispatch:
+  schedule:
+    - cron: 0 4 * * *
 
 # see more at https://github.com/DavidingPlus/nvmixfs/issues/1
 jobs:
